[package]
name = "infra402-facilitator"
version = "0.0.2"
authors = ["0xcartman <0xcartman@pm.me>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/infra402/infra402-facilitator"
description = "Production-ready x402 facilitator with enhanced security features, abuse detection, rate limiting, and multi-chain support"
readme = "README.md"
homepage = "https://infra402.com"
documentation = "TBA"
keywords = ["blockchain", "payments", "x402", "stablecoin", "http-402", "infrastructure", "ai-agents"]
categories = ["cryptography", "finance", "network-programming", "web-programming::http-server"]

[dependencies]
axum = { version = "0.8.6" }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["rt"] }
dotenvy = { version = "0.15.7" }
serde_json = { version = "1.0.143" }
tower-http = { version = "0.6.6", features = ["trace", "cors", "limit"] }
tower = { version = "0.5.2" }
serde = { version = "1.0.219", features = ["derive"] }
once_cell = { version = "1.21.3" }
regex = { version = "1.11.1" }
url = { version = "2.5.4", features = ["serde"] }
alloy = { version = "1.1.0" }
thiserror = { version = "2.0.12" }
base64 = { version = "0.22.1" }
rust_decimal = { version = "1.37.1" }
async-trait = { version = "0.1.88" }
dashmap = { version = "6.1.0" }
ipnetwork = { version = "0.20.0" }
config = { version = "0.14.1", default-features = false, features = ["toml"] }

# Solana
solana-sdk = { version = "2.3.1", features = ["full"] }
solana-commitment-config = { version = "2.2.1" } # Older version due to compatibility with solana-sdk
bincode = { version = "1.3.3" } # Older version due to compatibility with solana-sdk
spl-token = { version = "8.0.0" }
spl-token-2022 = { version = "9.0.0" }
solana-client = { version = "2.3.7" }

# Tracing and OpenTelemetry
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
opentelemetry = { version = "0.30.0" }
opentelemetry_sdk = { version = "0.30.0" }
opentelemetry-semantic-conventions = { version = "0.30.0", features = ["semconv_experimental"] }
tracing-core = { version = "0.1.34" }
tracing-opentelemetry = { version = "0.31.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["metrics", "grpc-tonic"] }
opentelemetry-stdout = { version = "0.30.0", features = ["trace", "metrics"] }
toml = "0.8.2"

[dev-dependencies]
toml = "0.8.2"

[features]
telemetry = []

[workspace]
members = [
  "crates/x402-axum",
  "examples/x402-axum-example",
  "crates/x402-reqwest",
  "examples/x402-reqwest-example",
  "crates/x402-stress-test",
  "."
]
