[package]
name = "x402-reqwest"
version = "0.4.0"
edition = "2024"
description = "Wrapper for reqwest for transparent x402 payments"
license = "Apache-2.0"
authors = ["Sergey Ukustov <sergey@ukstv.me>"]
repository = "https://github.com/x402-rs/x402-rs"
homepage = "https://x402.rs"
documentation = "https://docs.rs/x402-reqwest"
keywords = ["axum", "middleware", "x402", "payments", "stablecoin"]
categories = ["web-programming::http-client", "authentication", "cryptography", "finance", "network-programming"]
readme = "README.md"

[dependencies]
infra402-facilitator = { path = "../..", default-features = false }
reqwest = { version = "0.13", features = ["json"] }
http = { version = "1.3.1" }
reqwest-middleware = { version = "0.5.0" }
tokio = { version = "1.49" }
async-trait = { version = "0.1.88" }
alloy = { version = "1.1" }
rand = { version = "0.9.1" }
serde_json = { version = "1.0.143" }
thiserror = { version = "2.0.12" }
solana-sdk = { version = "2.3.1", features = ["full"] }
solana-client = { version = "2.3.7" }
spl-token = { version = "8.0.0" }
spl-token-2022 = { version = "9.0.0" }
spl-associated-token-account = { version = "7.0.0" }

bincode = { version = "1.3.3" } # Older version due to compatibility with solana-sdk

# Telemetry
tracing = { version = "0.1.41" }

[features]
telemetry = ["infra402-facilitator/telemetry"]
