[package]
name = "x402-reqwest-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
x402-reqwest = { path = "../../crates/x402-reqwest" }
infra402-facilitator = { path = "../.." }
alloy = { version = "1.1" }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.49" }
dotenvy = { version = "0.15.7" }
solana-sdk = { version = "2.3.1", features = ["full"] }
spl-token = { version = "8.0.0" , features = ["no-entrypoint"] }
spl-token-2022 = { version = "9.0.0" , features = ["no-entrypoint"] }
solana-client = { version = "2.3.7" }

bincode = { version = "1.3.3" } # Older version due to compatibility with solana-sdk
